# yafd

./: CNAME  MANIFEST.in  README.md  TUTORIAL.md  requirements.txt  setup.cfg
prometheus/: prometheus.yaml
schematics/: food_dispenser.fzz
scripts/: prometheus_yafd_exporter.py  serial_port_dumper.py
sketches/food_dispenser/: food_dispenser.ino
sketches/food_dispenser_low_power/: food_dispenser_low_power.ino
