[metadata]
name = YAFD
version = 0.0.1
author = Jose Vicente Nunez Zuleta
author_email = kodegeek.com@protonmail.com
license = Apache 2.0
summary = Code for food dispenser powered by an Arduino controller
home_page = https://github.com/josevnz/yafd
description = Scripts, code, tutorial on how to make a pet food dispenser for fun
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = yafd
setup_requires =
    setuptools
    wheel
    build
    pip
    twine
install_requires =
    importlib; python_version == "3.9"
    rich
    setuptools
    toml
scripts =
    scripts/serial_capture.py
